--- a/ConcentriX.CSharp.csproj
+++ b/ConcentriX.CSharp.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Assets\Scripts\ConcentrxWave.cs" />
     <Compile Include="Assets\Scripts\DestroyTimer.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\SetPlayerPosition.cs" />
     <Compile Include="Assets\Scripts\SmoothFollow.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
